[gd_scene load_steps=8 format=3 uid="uid://bdu3kdmck2ij3"]

[ext_resource type="Theme" uid="uid://clny4maioyt6j" path="res://Fonts/font_theme.tres" id="1_rvbjj"]
[ext_resource type="StyleBox" uid="uid://dmful4r8udbfr" path="res://Art/Blackboard.tres" id="3_ioopo"]
[ext_resource type="Script" uid="uid://b55hux5et4vhb" path="res://Scripts/button_state.gd" id="4_owgk4"]
[ext_resource type="Script" uid="uid://5e8p5kf1qhoc" path="res://Scripts/UI/deck_bar.gd" id="4_t1xeu"]
[ext_resource type="Script" uid="uid://2a387unpvvik" path="res://Scripts/UI/score_bar.gd" id="5_36asn"]
[ext_resource type="Script" uid="uid://y6taemufxrvy" path="res://Scenes/dice_score.gd" id="7_8jye8"]
[ext_resource type="FontFile" uid="uid://bkx5bbg0gevvk" path="res://Fonts/Bellfoods.otf" id="7_e1fvy"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_rvbjj")

[node name="Power Bar" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Top Bar" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Information Bar" type="Panel" parent="Top Bar"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 100.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="Info_Show_Hide" type="Button" parent="Top Bar/Information Bar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = 7.0
offset_right = -4.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 0
rotation = -1.5708
toggle_mode = true
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Top Bar/Information Bar"]
layout_mode = 2
offset_top = 8.0
offset_right = 1280.0
offset_bottom = 96.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Top Bar/Information Bar/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Info Text" type="Label" parent="Top Bar/Information Bar/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Goals"
horizontal_alignment = 1

[node name="Main Text" type="Label" parent="Top Bar/Information Bar/HBoxContainer/VBoxContainer"]
modulate = Color(0.392157, 0.878431, 0, 1)
layout_mode = 2
text = "Main Objective: Score over 100"
horizontal_alignment = 1

[node name="Optional Text" type="Label" parent="Top Bar/Information Bar/HBoxContainer/VBoxContainer"]
modulate = Color(0.917647, 0.133333, 0, 1)
layout_mode = 2
text = "Optional: Do not lock dice"
horizontal_alignment = 1

[node name="Bottom Bar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_t1xeu")

[node name="Dice Area" type="Panel" parent="Bottom Bar"]
layout_mode = 0
offset_left = 1.0
offset_top = 556.0
offset_right = 1279.0
offset_bottom = 720.0

[node name="PlayArea" type="Panel" parent="Bottom Bar"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 172.0
offset_top = 161.0
offset_right = 1108.0
offset_bottom = 554.0

[node name="CurrentDice" type="PanelContainer" parent="Bottom Bar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 695.0
offset_top = 570.0
offset_right = 1145.0
offset_bottom = 670.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom Bar/CurrentDice"]
layout_mode = 2

[node name="Current Text" type="Label" parent="Bottom Bar/CurrentDice/VBoxContainer"]
layout_mode = 2
text = "Current"
horizontal_alignment = 1

[node name="CurrentHBox" type="HBoxContainer" parent="Bottom Bar/CurrentDice/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Deck" type="PanelContainer" parent="Bottom Bar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 570.0
offset_right = 115.0
offset_bottom = 670.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="Deck Text" type="Label" parent="Bottom Bar/Deck"]
layout_mode = 2
text = "Deck"
horizontal_alignment = 1

[node name="DeckPreview" type="PanelContainer" parent="Bottom Bar"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 16.0
offset_top = 440.0
offset_right = 115.0
offset_bottom = 548.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="DeckHBox" type="HBoxContainer" parent="Bottom Bar/DeckPreview"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Discard" type="PanelContainer" parent="Bottom Bar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1159.0
offset_top = 570.0
offset_right = 1259.0
offset_bottom = 670.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="Discard Text" type="Label" parent="Bottom Bar/Discard"]
layout_mode = 2
text = "Discard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardPreview" type="PanelContainer" parent="Bottom Bar"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1159.0
offset_top = 441.0
offset_right = 1260.0
offset_bottom = 549.0
grow_horizontal = 0
pivot_offset = Vector2(99, 105)
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="DiscardHBox" type="HBoxContainer" parent="Bottom Bar/DiscardPreview"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Upcoming Dice" type="PanelContainer" parent="Bottom Bar"]
layout_mode = 0
offset_left = 135.0
offset_top = 570.0
offset_right = 585.0
offset_bottom = 670.0
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom Bar/Upcoming Dice"]
layout_mode = 2

[node name="Next Text" type="Label" parent="Bottom Bar/Upcoming Dice/VBoxContainer"]
layout_mode = 2
text = "Next"
horizontal_alignment = 1

[node name="NextHBox" type="HBoxContainer" parent="Bottom Bar/Upcoming Dice/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Button Display" type="PanelContainer" parent="Bottom Bar"]
layout_mode = 0
offset_left = 590.0
offset_top = 570.0
offset_right = 689.0
offset_bottom = 670.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom Bar/Button Display"]
layout_mode = 2
alignment = 1

[node name="NextRoundButton" type="Button" parent="Bottom Bar/Button Display/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
disabled = true
text = "Next Round"
autowrap_mode = 2

[node name="Active Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Active" type="Panel" parent="Active Panel"]
visible = false
layout_mode = 0
offset_top = 123.0
offset_right = 200.0
offset_bottom = 423.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="Current Text" type="Label" parent="Active Panel/Active"]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 186.0
offset_bottom = 39.0
grow_horizontal = 2
text = "Influence"
horizontal_alignment = 1

[node name="Active_Show_Hide" type="Button" parent="Active Panel/Active"]
layout_mode = 2
offset_left = 201.0
offset_top = 136.0
offset_right = 209.0
offset_bottom = 160.0
grow_horizontal = 0
grow_vertical = 2
toggle_mode = true
icon_alignment = 1

[node name="Score Panel" type="Control" parent="."]
anchors_preset = 0
offset_left = 1080.0
offset_top = 96.0
offset_right = 1080.0
offset_bottom = 96.0
script = ExtResource("5_36asn")

[node name="Score" type="Panel" parent="Score Panel"]
layout_mode = 0
offset_top = 8.0
offset_right = 199.0
offset_bottom = 308.0

[node name="ScoreButton" type="Button" parent="Score Panel/Score"]
unique_name_in_owner = true
layout_mode = 2
offset_left = -8.0
offset_top = 120.0
offset_bottom = 144.0
toggle_mode = true
icon_alignment = 1
script = ExtResource("4_owgk4")

[node name="ScoreContainer" type="PanelContainer" parent="Score Panel/Score"]
layout_mode = 0
offset_right = 197.0
offset_bottom = 300.0
theme_override_styles/panel = ExtResource("3_ioopo")

[node name="VBoxContainer" type="VBoxContainer" parent="Score Panel/Score/ScoreContainer"]
layout_mode = 2

[node name="Score Title Text" type="Label" parent="Score Panel/Score/ScoreContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_rvbjj")
theme_override_fonts/font = ExtResource("7_e1fvy")
text = "Score"
horizontal_alignment = 1

[node name="Score Space" type="Control" parent="Score Panel/Score/ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="DiceScoreVBox" type="VBoxContainer" parent="Score Panel/Score/ScoreContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Total Space" type="Control" parent="Score Panel/Score/ScoreContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoreTextHBox" type="VBoxContainer" parent="Score Panel/Score/ScoreContainer/VBoxContainer"]
layout_mode = 2

[node name="RoundScoreText" type="Label" parent="Score Panel/Score/ScoreContainer/VBoxContainer/ScoreTextHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 2.0
text = "Round: 0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TotalScoreText" type="Label" parent="Score Panel/Score/ScoreContainer/VBoxContainer/ScoreTextHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 2.0
text = "Total: 0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Holding Area" type="Panel" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = 1.0
offset_right = -41.0
offset_bottom = 41.0

[node name="VBoxContainer" type="VBoxContainer" parent="Holding Area"]
layout_mode = 0
offset_left = -81.0
offset_top = 1.0
offset_right = -41.0
offset_bottom = 41.0

[node name="DiceScore" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = -25.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(115.5, 94)
theme_override_styles/panel = ExtResource("3_ioopo")
script = ExtResource("7_8jye8")

[node name="DiceBreakdownVBox" type="VBoxContainer" parent="DiceScore"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="BaseLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Base: 5"
horizontal_alignment = 1
vertical_alignment = 3

[node name="FlatLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Flat: 2"
horizontal_alignment = 1
vertical_alignment = 3

[node name="QualityLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Quality: 5"
horizontal_alignment = 1
vertical_alignment = 3

[node name="CourseLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Bonus: 0"
horizontal_alignment = 1
vertical_alignment = 3

[node name="MultiplierLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Multi: 4"
horizontal_alignment = 1
vertical_alignment = 3

[node name="AppliedLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "THIS IS A LOT OF TEXT"
horizontal_alignment = 1

[node name="TotalLabel" type="Label" parent="DiceScore/DiceBreakdownVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Total: 50"
horizontal_alignment = 1
vertical_alignment = 3

[connection signal="toggled" from="Score Panel/Score/ScoreButton" to="Score Panel/Score/ScoreButton" method="_on_score_button_toggled"]
